--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -4,6 +4,7 @@
 		<title>Dirlididi</title>
 		<link rel="stylesheet" href="css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src='http://cdn.ractivejs.org/latest/ractive.min.js'></script>
 	</head>
 	<body aurelia-app>
 		<script src="jspm_packages/system.js"></script>
